Upgrade Java build to target JDK 17 (#2010)